2001-03-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (ReturnFocusWindow):
	new function

	* fvwm/misc.c (UngrabEm):
	fixed pointer grabbing/focus after a menu closes

	* fvwm/move_resize.c (CMD_Resize):
	fixed resizing shaded windows w/ titleatbottom

2001-03-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* INSTALL.fvwm (Note):
	* vms/config.h:
	* fvwm/cursor.h:
	* acconfig.h:
	* configure.in:
	* fvwm/builtins.c (CMD_BugOpts):
	* fvwm/fvwm.c (InitVariables):
	removed --enable-move-bug-workaround configure option
	removed --disable-modality configure option
	removed remnants of BUSYCURSOR configure option

2001-03-24  Mikhael Goikhman  <migo@homemail.com>

	* NEWS:
	* sample.fvwmrc/system.fvwm2rc-sample-2:
	small rewording/spelling

2001-03-24  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/modconf.c (CMD_Send_ConfigInfo):
	* fvwm/module_interface.c (CMD_SendToModule):
	* fvwm/builtins.c (CMD_Beep):
	(CMD_EscapeFunc):
	* fvwm/gnome.c (CMD_GnomeShowDesks):
	(CMD_GnomeButton):
	* fvwm/modconf.c (CMD_DestroyModuleConfig):
	* fvwm/windowlist.c (CMD_WindowList):
	* fvwm/virtual.c (CMD_EdgeThickness):
	(CMD_EdgeScroll):
	(CMD_EdgeResistance):
	(CMD_DesktopSize):
	(CMD_GotoDesk):
	(CMD_GotoDeskAndPage):
	(CMD_GotoPage):
	(CMD_MoveToDesk):
	(CMD_Scroll):
	* fvwm/update.c (CMD_UpdateStyles):
	* fvwm/style.c (CMD_DestroyStyle):
	(CMD_StyleStyle):
	* fvwm/stack.c (CMD_Raise):
	(CMD_Lower):
	(CMD_RaiseLower):
	(CMD_Layer):
	(CMD_DefaultLayers):
	* fvwm/session.c (CMD_QuitSession):
	(CMD_SaveSession):
	(CMD_SaveQuitSession):
	* fvwm/repeat.c (CMD_Repeat):
	* fvwm/read.c (CMD_Read):
	(CMD_PipeRead):
	* fvwm/placement.c (CMD_PlaceAgain):
	* fvwm/move_resize.c (CMD_ResizeMove):
	(CMD_Move):
	(CMD_AnimatedMove):
	(CMD_MoveToPage):
	(CMD_MoveThreshold):
	(CMD_OpaqueMoveSize):
	(CMD_HideGeometryWindow):
	(CMD_SnapAttraction):
	(CMD_SnapGrid):
	(CMD_XorValue):
	(CMD_XorPixmap):
	(CMD_Resize):
	(CMD_Maximize):
	(CMD_Stick):
	* fvwm/module_interface.c (CMD_Module):