@@ -1,3 +1,7 @@
+2001-03-26  Dan Espen  <dane@mk.telcordia.com>
+
+	* fvwm/add_window.c (setup_style_and_decor): Make useDecor work again.
+
 2001-03-26  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/focus.c (ReturnFocusWindow):
